# cirv-sdv

./: .gitignore  .gitlab-ci.yml  .gitreview  INFO.yaml  LICENSE  README.md  check  pylintrc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  yamllintrc
ci/: build-cirv.sh
docs/: .index.rst.swp  conf.yaml  index.rst
docs/development/: index.rst
docs/release/configguide/: index.rst
docs/release/overview/: index.rst
docs/release/release-notes/: index.rst  release-notes.rst
docs/release/userguide/: index.rst
docs/sdvconfig/developer/: devguide.rst
docs/security/: userguide.rst
docs/state/user/: userguide.rst
docs/urls/: userguide.rst
sdv/: valid
sdv/NwLinksValid/: __init__.py  nwlinksvalidator.py
sdv/ResourceModelValid/: __init__.py  resmodvalidator.py
sdv/SoftwarePostSecurityValid/: __init__.py  swpostsecurityvalidator.py
sdv/SoftwarePostStateValid/: __init__.py  swpoststatevalidator.py
sdv/SoftwarePostValid/: __init__.py  swpostvalidator.py
sdv/SoftwarePreConfigValid/: __init__.py  swpreconfigvalidator.py
sdv/SoftwarePreUrlsValid/: __init__.py  airship.py  swpreurlsvalidator.py
sdv/SoftwarePreValid/: __init__.py  airship.py  swprevalidator.py
sdv/conf/: 00_common.conf  01_swpreurlsvalid.conf  01_swprevalid.conf  02_swpostvalid.conf  02_swpreconfigvalid.conf  03_swpoststatevalid.conf  04_swpostsecurityvalid.conf  05_nwlinksvalid.conf  06_resmodsvalid.conf  06_resmodvalid.conf  __init__.py
sdv/core/: __init__.py  component_factory.py
sdv/docs/: valid.rst
sdv/sdv-pre/: Dockerfile  README.md  cli_validation.py  server.py
(+210 files in other folders)
